// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScdlGrantParser DILCRAH_2019 scheme should extract data 1`] = `
Array [
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "SPM - DILCRAH",
    "allocatorSiret": "12000123400023",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": undefined,
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
  },
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "SPM - DILCRAH",
    "allocatorSiret": "12000123400023",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": undefined,
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
  },
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "SPM - DILCRAH",
    "allocatorSiret": "12000123400023",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": undefined,
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
  },
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "SPM - DILCRAH",
    "allocatorSiret": "12000123400023",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": undefined,
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
  },
]
`;

exports[`ScdlGrantParser OFFICIAL SCDL scheme should extract data 1`] = `
Array [
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
  },
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
  },
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
  },
  Object {
    "UeNotification": false,
    "aidSystem": undefined,
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
  },
]
`;
